fix: login page aligning

--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -4,12 +4,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: fit-content;
-  margin: 96px auto;
+  height: 100vh;
+  margin: 0 auto;
 
   img {
     width: 300px;
-    margin-bottom: 32px;
+    margin-bottom: 18px;
   }
 }
 
@@ -37,7 +39,6 @@
   font-size: 14px;
   color: $vermelho;
   width: 100%;
-
 }
 
 .botao {
